# PII-Shield-staging

./: .dxtignore  .gitignore  .mcpbignore  README.md  manifest.json  pyproject.toml  setup_pii_shield.bat  setup_pii_shield.py  setup_pii_shield.sh
.github/workflows/: test.yml
nodejs/: .gitignore  esbuild.config.mjs  package-lock.json  package.json  pii_shield_model__README.txt
nodejs-v2/: .gitignore  README.md  manifest.json  package-lock.json  package.json  tsconfig.cli.json  tsconfig.json  tsconfig.ui.json  vite.config.ts
nodejs-v2/cli/: README.md  USAGE.md  build-cli.mjs
nodejs-v2/plugin/: build-mac-binary.mjs  build-plugin.mjs  build-testkit.mjs  testkit-INSTALL.md
nodejs-v2/scripts/: install-model.bat  install-model.command  install-model.ps1  install-model.sh  model-cache-utils.mjs  smoke-cli.mjs  smoke-protocol.mjs  smoke-setup-panel.mjs  smoke-sharp-shim.mjs
nodejs-v2/src/: index.ts
nodejs-v2/tests/: custom-props-roundtrip.ts  e2e-test.mjs  hashing-test.ts  mapping-store-session-test.ts  multi-doc-apply-overrides-e2e.mjs  multi-doc-review-test.ts  multi-file-session-e2e.mjs  needs-setup-envelope-e2e.mjs  placeholder-serde-test.ts  (+3 more)
pii-contract-analyze/: SKILL.md
proxy/: bootstrap.js  config.js  index.js  install-skill.js  package-lock.json  package.json  python-manager.js  requirements.txt
server/: pii_shield_server.py  review_demo.html  review_ui.html
tests/: conftest.py  test_anonymization.py  test_chunking.py  test_deduplication.py  test_detection.py  test_eu_recognizers.py  test_false_positives.py  test_mapping.py  test_overrides.py
(+108 files in other folders)
