[project]
name = "pii-shield"
version = "1.0.0"
description = "PII Shield MCP Server — GLiNER NER for legal document PII detection and anonymization"
requires-python = ">=3.10"

dependencies = [
    "mcp[cli]>=1.0.0",
    "presidio-analyzer>=2.2.355",
    "spacy>=3.7.0",
    "python-docx>=1.1.0",
    "torch>=2.0.0",
    "gliner>=0.2.7",
    "numpy>=1.24.0",
    "cryptography>=42.0.0",
]

[project.scripts]
pii-shield = "server.pii_shield_server:main"
